yaml/docker.yaml
apiVersion: v1
kind: Pod
spec:
  containers:    
  - name: docker
    image: docker:19.03.1-dind
    securityContext:
      privileged: true
