yaml/deploy.yaml
## Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pyapp
  name: pyapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pyapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pyapp
    spec:
      containers:
      - image: vnp79/pyapp:latest
        name: pyapp
        resources:
          requests:
            memory: "200Mi"
            cpu: "128m"
          limits:
            memory: "300Mi"
            cpu: "512m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
status: {}

##Service
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pyapp
  name: pyapp
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pyapp
  type: ClusterIP
status:
  loadBalancer: {}

##AutoScaling
