yaml/ingress.yaml
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
spec:
  rules:
  - host: vnp.dvrt.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
              name: jenkins 
              port: 
                number: 8080
