yaml/prom-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.vnp.dvrt.xyz 
    http:
      paths:
      - backend:
          serviceName: prom-kube-prometheus-stack-prometheus
          servicePort: 9090
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: alertmanager.vnp.dvrt.xyz
    http:
      paths:
      - backend:
          serviceName: prom-kube-prometheus-stack-alertmanager
          servicePort: 9093
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: grafana.vnp.dvrt.xyz
    http:
      paths:
      - backend:
          serviceName: prom-grafana
          servicePort: 80
